tests/e2e/pass/v38_hex_integer_literal.ep
# EXIT: 42

fun main(): void {
    if 0X7FFFFFFFFFFFFFFF != 9223372036854775807 {
        exit(1)
    }
    exit(0x2a)
}
