tests/e2e/fail/ptr_source_type.ep
# COMPILE_ERROR: unknown type 'ptr'
fun expose(value: ptr): void {
}

fun main(): void {
}
